[tool.poetry]
name = "winds-pleasure"
version = "0.1.0"
description = "Remove advertisements and other anti-features from inside email content"
authors = ["Radian LLC <contact+winds-pleasure@radian.codes>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
